Avoid layout too wide

--- a/style.scss
+++ b/style.scss
@@ -27,7 +27,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 124px;
   padding: 0 20px;
   width: 100%;
 }
